--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -3,7 +3,7 @@
   <div class="navbar-expand mr-auto">
     <div class="navbar-nav">
       <a class="nav-item nav-link active" routerLink="/hotels">Jardins</a>
-      <a class="nav-item nav-link active" routerLink="/rooms">Varietes</a>
+      <a class="nav-item nav-link active" routerLink="/variety-home">Varietes</a>
       <a class="nav-item nav-link active" routerLink="/guests">Plante</a>
     </div>
   </div>
