--- a/client/src/app/room/room.component.html
+++ b/client/src/app/room/room.component.html
@@ -1,5 +1,5 @@
 <div id="room">
-  <h1>Rooms</h1>
+  <h1>Variétés</h1>
 
   <div class="divider"></div>
 
@@ -22,32 +22,28 @@
     class="table-striped table-hover"
   >
     <thead class="roomsheader">
-      <th class="contentCell">HOTEL NUMBER</th>
-      <th class="contentCell">ROOM NUMBER</th>
-      <th class="contentCell">ROOM TYPE</th>
-      <th class="contentCell">ROOM PRICE</th>
+      <th class="contentCell">nom de la variéte</th>
+      <th class="contentCell">année de mise en marche</th>
+      <th class="contentCell">description semis</th>
+      <th class="contentCell">plantation</th>
+      <th class="contentCell">entretien</th>
+      <th class="contentCell">recolte</th>
+      <th class="contentCell">période de mise en place</th>
+      <th class="contentCell">période de récolte</th>
+      <th class="contentCell">commentaire générale</th>
       <th class="actionCell">ACTION</th>
     </thead>
     <tbody>
-      <tr *ngFor="let room of rooms; let i = index">
-        <td class="contentCell">{{ room.hotelnb }}</td>
-        <td class="contentCell">{{ room.roomnb }}</td>
-        <td class="contentCell" contenteditable="true" (blur)="changeRoomType($event, i)">{{ room.type }}</td>
-        <td class="contentCell" contenteditable="true" (blur)="changeRoomPrice($event, i)">{{ room.price }}</td>
-        <td class="actionCell">
-          <button type="button" class="submitbtn" (click)="updateRoom(i)"> <i class="fa fa-edit"></i></button>
-          <button type="button" class="deletebtn" (click)="deleteRoom(room.hotelnb, room.roomnb)">
-            <i class="fa fa-trash-o"></i>
-          </button>
-        </td>
-      </tr>
-
-      <tr class="blank_row">
-        <td class="contentCell">{{selectedHotel.hotelnb}}</td>
-        <td class="contentCell" contenteditable="true" placeholder="New Number" #newRoomNb></td>
-        <td class="contentCell" contenteditable="true" placeholder="New Type" #newRoomType></td>
-        <td class="contentCell" contenteditable="true" placeholder="New Price" #newRoomPrice></td>
-        <td class="contentCell"></td>
+      <tr *ngFor="let variety of varieties; let i = index">
+        <td class="contentCell">{{ variety.nom }}</td>
+        <td class="contentCell">{{ variety.anneeDeMiseEnMarche }}</td>
+        <td class="contentCell">{{ variety.descriptionsSemis }}</td>
+        <td class="contentCell">{{ variety.plantation }}</td>
+        <td class="contentCell">{{ variety.entretien }}</td>
+        <td class="contentCell">{{ variety.recolte }}</td>
+        <td class="contentCell">{{ variety.periodeMiseEnPlace }}</td>
+        <td class="contentCell">{{ variety.periodeRecolte }}</td>
+        <td class="contentCell">{{ variety.commentaireGenerale }}</td>
       </tr>
     </tbody>
   </table>
