Fix interface property name client side

--- a/client/src/app/guest/guest.component.html
+++ b/client/src/app/guest/guest.component.html
@@ -36,8 +36,8 @@
         </thead>
         <tbody>
             <tr *ngFor="let plant of plants">
-                <td class="contentCell">{{ plant.nomLatin }}</td>
-                <td class="contentCell">{{ plant.nomVariete }}</td>
+                <td class="contentCell">{{ plant.nomlatin }}</td>
+                <td class="contentCell">{{ plant.nomvariete }}</td>
                 <td class="contentCell">{{ plant.nom }}</td>
                 <td class="contentCell">{{ plant.categorie }}</td>
                 <td class="contentCell">{{ plant.type_ }}</td>
