--- a/client/src/app/room/room.component.html
+++ b/client/src/app/room/room.component.html
@@ -36,14 +36,14 @@
     <tbody>
       <tr *ngFor="let variety of varieties; let i = index">
         <td class="contentCell">{{ variety.nom }}</td>
-        <td class="contentCell">{{ variety.anneeDeMiseEnMarche }}</td>
-        <td class="contentCell">{{ variety.descriptionsSemis }}</td>
+        <td class="contentCell">{{ variety.anneedemiseenmarche }}</td>
+        <td class="contentCell">{{ variety.descriptionssemis }}</td>
         <td class="contentCell">{{ variety.plantation }}</td>
         <td class="contentCell">{{ variety.entretien }}</td>
         <td class="contentCell">{{ variety.recolte }}</td>
-        <td class="contentCell">{{ variety.periodeMiseEnPlace }}</td>
-        <td class="contentCell">{{ variety.periodeRecolte }}</td>
-        <td class="contentCell">{{ variety.commentaireGenerale }}</td>
+        <td class="contentCell">{{ variety.periodemiseenplace }}</td>
+        <td class="contentCell">{{ variety.perioderecolte }}</td>
+        <td class="contentCell">{{ variety.commentairegenerale }}</td>
       </tr>
     </tbody>
   </table>
