fix plant interface attribute

--- a/client/src/app/guest/guest.component.html
+++ b/client/src/app/guest/guest.component.html
@@ -41,7 +41,7 @@
                 <td class="contentCell">{{ plant.nom }}</td>
                 <td class="contentCell">{{ plant.categorie }}</td>
                 <td class="contentCell">{{ plant.type_ }}</td>
-                <td class="contentCell">{{ plant.sousType }}</td>
+                <td class="contentCell">{{ plant.soustype }}</td>
             </tr>
         </tbody>
     </table>
