--- a/client/src/app/add-variety-page/add-variety-page.component.html
+++ b/client/src/app/add-variety-page/add-variety-page.component.html
@@ -1,5 +1,5 @@
 <div id="guest">
-    <h1>Guests</h1>
+    <h1>Ajouter une variété</h1>
 
     <div class="divider"></div>
 
@@ -16,7 +16,7 @@
         <input type="text" id="fname" name="fname" [(ngModel)]="variety.nom"><br>
 
         <label for="fyear">Annee de mise en marche:</label><br>
-        <input type="number" min="1900" max="2022" step="1" id="fyear" name="fyear" [(ngModel)]="variety.anneedemiseenmarche"><br>
+        <input type="number" onKeyDown="return false" min="1900" max="2022" step="1" id="fyear" name="fyear" [(ngModel)]="variety.anneedemiseenmarche"><br>
 
         <label for="fdescription">Description de semis:</label><br>
         <textarea type="text" id="fdescription" name="fdescription" [(ngModel)]="variety.descriptionssemis"></textarea><br>
@@ -31,13 +31,11 @@
         <input type="text " id="frecolte " name="frecolte " [(ngModel)]="variety.recolte"><br>
 
         <label for="fsetUpPeriod ">Période de mise en place:</label><br>
-        <input type="text " id="fsetUpPeriod " name="fsetUpPeriod " [(ngModel)]="variety.periodemiseEnPlace"><br>
         <select [(ngModel)]="selectedSetupPeriod">
           <option [value]="item.id" *ngFor="let item of seasons">{{item.name}}</option>
            </select>
 
         <label for="fharvestPeriod ">Période de recolte:</label><br>
-        <input type="text " id="fharvestPeriod " name="fharvestPeriod " [(ngModel)]="variety.perioderecolte"><br>
         <select [(ngModel)]="selectedHarvestPeriod">
             <option [value]="item.id" *ngFor="let item of seasons">{{item.name}}</option>
              </select>
@@ -46,6 +44,6 @@
         <label for="fcomments ">Commentaires:</label><br>
         <textarea type="text " id="fcomments " name="fcomments " [(ngModel)]="variety.commentairegenerale">arise</textarea><br>
 
-        <button (click)="addVariety() ">Ajouter</button>
+        <button (click)="addVariety() " [disabled]="!isFormFilled()">Ajouter</button>
     </form>
 </div>
