--- a/client/src/app/variety-modify/variety-modify-popup/variety-modify-popup.component.html
+++ b/client/src/app/variety-modify/variety-modify-popup/variety-modify-popup.component.html
@@ -4,5 +4,5 @@
 </div>
 <div>
     <label>annee de mise en marche</label>
-    <input type="text" [(ngModel)]="variety.anneedemiseenmarche")>
+    <input type="text" [(ngModel)]="variety.anneedemiseenmarche">
 </div>
