--- a/client/src/app/guest/guest.component.html
+++ b/client/src/app/guest/guest.component.html
@@ -8,9 +8,9 @@
             <div class="input-group-prepend">
                 <label class="input-group-text" for="hotelSelect">Hotel</label>
             </div>
-            <select class="custom-select" id="hotelSelect" (change)="updateSelectedHotel($event.target.options.selectedIndex)">
+            <!-- <select class="custom-select" id="hotelSelect" (change)="updateSelectedHotel($event.target.options.selectedIndex)">
         <option *ngFor="let hotel of hotelPKs">{{ hotel.name }}</option>
-      </select>
+      </select> -->
         </div>
     </div>
 
@@ -18,10 +18,10 @@
         <div class="input-group mb-3">
             <div class="input-group-prepend">
                 <label class="input-group-text" for="roomSelect">Room</label>
-            </div>
+            <!-- </div>
             <select class="custom-select" id="roomSelect" (change)="updateSelectedRoom($event.target.options.selectedIndex)">
-        <option *ngFor="let room of rooms">{{ room.roomnb }}</option>
-      </select>
+        <option *ngFor="let room of rooms">{{ room.roomnb }}</option> -->
+      <!-- </select> -->
         </div>
     </div>
 
