--- a/client/src/app/add-variety-page/add-variety-page.component.css
+++ b/client/src/app/add-variety-page/add-variety-page.component.css
@@ -11,6 +11,19 @@
     width: 50%;
 }
 
+.error-container {
+    background-color: #ffa381;
+    border: 1px solid #cb1313;
+    border-radius: 4px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    display: flex;
+    gap: 8px;
+    align-items: center;
+    min-height: 40px;
+    width: 50%;
+}
+
 .success-container mat-icon {
     padding-left: 8px;
     color: #748b6e;
@@ -21,6 +34,7 @@
 .add-variety textarea,
 .add-variety select * {
     font-size: 24px;
+    width: 600px;
 }
 
 .add-variety {
@@ -28,4 +42,13 @@
     align-items: center;
     flex-direction: column;
     justify-content: center;
+}
+
+.error {
+    color: red;
+}
+
+button {
+    padding: 8px;
+    font-size: 24px;
 }
