--- a/client/src/app/add-variety-page/add-variety-page.component.html
+++ b/client/src/app/add-variety-page/add-variety-page.component.html
@@ -5,24 +5,32 @@
     <div class="success-container" *ngIf="varietyUploaded">
         <div class="success">Votre variété a été ajoutée à la DB</div>
     </div>
+    <div class="error-container" *ngIf="errorMessage">
+        <div class="error-message">{{errorMessage}</div>
+    </div>
     <form>
         <label for="fname">nom variété:</label><br>
         <input type="text" id="fname" name="fname" [(ngModel)]="variety.nom" placeholder="ex : Legumieres"><br>
+        <label for="fname" *ngIf="variety.nom.length < 1 || variety.nom.length > 30" class="error">Ce champ doit avoir entre 1 et 30 characteres</label><br>
 
         <label for="fyear">Annee de mise en marche:</label><br>
         <input type="number" onKeyDown="return false" min="1900" max="2022" step="1" id="fyear" name="fyear" [(ngModel)]="variety.anneedemiseenmarche"><br>
 
         <label for="fdescription">Description de semis:</label><br>
         <textarea type="text" id="fdescription" name="fdescription" [(ngModel)]="variety.descriptionssemis" placeholder="ex : Terre souple"></textarea><br>
+        <label for="fname" *ngIf="variety.descriptionssemis.length < 1" class="error">Ce champ ne doit pas être vide</label><br>
 
         <label for=" fplantation ">Plantation:</label><br>
         <input type="text " id="fplantation " name="fplantation " [(ngModel)]="variety.plantation" placeholder="ex : Hautes herbes"><br>
+        <label for="fname" *ngIf="variety.plantation.length < 1 || variety.plantation.length > 50" class="error">Ce champ doit avoir entre 1 et 100 characteres</label><br>
 
         <label for="fentretien ">Entretien:</label><br>
         <input type="text " id="fentretien " name="fentretien " [(ngModel)]="variety.entretien" placeholder="ex : Une fois par jour"><br>
+        <label for="fname" *ngIf="variety.entretien.length < 1 || variety.entretien.length > 50" class="error">Ce champ doit avoir entre 1 et 100 characteres</label><br>
 
         <label for="frecolte ">Récolte:</label><br>
         <input type="text " id="frecolte " name="frecolte " [(ngModel)]="variety.recolte" placeholder="ex : Le soir"><br>
+        <label for="fname" *ngIf="variety.recolte.length < 1 || variety.recolte.length > 100" class="error">Ce champ doit avoir entre 1 et 100 characteres</label><br>
 
         <label for="fsetUpPeriod ">Période de mise en place:</label><br>
         <select [(ngModel)]="selectedSetupPeriod">
