--- a/client/src/app/hotel/jardin-details/jardin-details.component.html
+++ b/client/src/app/hotel/jardin-details/jardin-details.component.html
@@ -24,7 +24,7 @@
         <th class="contentCell">Id parcelle</th>
         <th class="contentCell">coordonnee X</th>
         <th class="contentCell">coordonnee Y</th>
-        <th class="contentCell">dimension x</th>
+        <th class="contentCell">dimension X</th>
         <th class="contentCell">dimension Y</th>
       </thead>
       <tbody>
