--- a/client/src/app/variety-modify/variety-modify.component.html
+++ b/client/src/app/variety-modify/variety-modify.component.html
@@ -45,8 +45,14 @@
           <td class="contentCell" *ngIf="!isSelectedVariety(variety)">{{ variety.commentairegenerale }}</td>
           <td class="contentCell" *ngIf="isSelectedVariety(variety)"><input type="text" [(ngModel)]="modifiedVariety.commentairegenerale"></td>
 
-          <td class="actionCell" *ngIf="!selectedVariety"><button (click)="selectVariety(variety)">Modifier</button></td>
-          <td class="actionCell" *ngIf="isSelectedVariety(variety)"><button (click)="modifyVariety(modifiedVariety)">Confirmer</button></td>
+          <td class="actionCell" *ngIf="!selectedVariety">
+            <button (click)="selectVariety(variety)">Modifier</button>
+            <button (click)="deleteVariety(variety.nom)">Suprimer</button>
+          </td>
+          <td class="actionCell" *ngIf="isSelectedVariety(variety)">
+            <button (click)="modifyVariety()">Confirmer</button>
+            <button (click)="deselectVariety()">Annuler</button>
+          </td>
 
         </tr>
       </tbody>
