Change header name

--- a/client/src/app/hotel/hotel.component.html
+++ b/client/src/app/hotel/hotel.component.html
@@ -29,7 +29,7 @@
   </table>
   
   <div *ngIf="gardenContent" id="dialog-header">
-    <h1 mat-dialog-title>Garden</h1>
+    <h1 mat-dialog-title>Informations pour le jardin</h1>
     <div mat-dialog-content class="goal-container">
       <header> Contenu des rangs  pour le jardin</header>
       <table id="ht" align="center" border="1" width="750" class="table-striped table-hover">
