Add combobox for periode in variety

--- a/client/src/app/variety-modify/variety-modify.component.css
+++ b/client/src/app/variety-modify/variety-modify.component.css
@@ -6,9 +6,9 @@
 }
 
 #ht {
-    /* align: "center"; */
     border: "1";
-    width: "1000";
+    width: "1000px";
+    max-width: "1000px";
     background-color: white;
     text-align: left;
 }
