--- a/client/src/app/variety-home/variety-home.component.html
+++ b/client/src/app/variety-home/variety-home.component.html
@@ -1,2 +1,4 @@
-<button class="nav-item nav-link active" routerLink="/variety-add">Ajouter les varietes</button>
-<button class="nav-item nav-link active" routerLink="/variety-modify">Modifier les varietes</button>
+<div class="container">
+    <button class="nav-item nav-link active" routerLink="/variety-add">Ajouter les varietes</button>
+    <button class="nav-item nav-link active" routerLink="/variety-modify">Modifier les varietes</button>
+</div>
