--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -2,9 +2,9 @@
   <a class="navbar-brand title" href="/">INF3710 - TP5</a>
   <div class="navbar-expand mr-auto">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" routerLink="/hotels">Jardins</a>
+      <a class="nav-item nav-link active" routerLink="/jardins">Jardins</a>
       <a class="nav-item nav-link active" routerLink="/variety-home">Varietes</a>
-      <a class="nav-item nav-link active" routerLink="/guests">Plante</a>
+      <a class="nav-item nav-link active" routerLink="/search">Plante</a>
     </div>
   </div>
 </nav>
@@ -14,7 +14,7 @@
     Welcome<br />to<br /><span class="hotel1">Jardins</span
     ><span class="hotel2">Jardins</span><span class="hotel3">Jardins</span>
   </p>
-  <button type="button" class="btn" routerLink="/hotels">Regarder nos jardins &#10140;</button>
+  <button type="button" class="btn" routerLink="/jardins">Regarder nos jardins &#10140;</button>
 </div>
 
 <router-outlet></router-outlet>
