--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -11,7 +11,7 @@
 
 <div class="home" *ngIf="route == ''">
   <p>
-    Welcome<br />to<br /><span class="hotel1">Jardins</span
+    Bienvenue<br />aux<br /><span class="hotel1">Jardins</span
     ><span class="hotel2">Jardins</span><span class="hotel3">Jardins</span>
   </p>
   <button type="button" class="btn" routerLink="/jardins">Regarder nos jardins &#10140;</button>
